[workspace]
members = ["eriemacros"]

[package]
name = "erieextension"
version = "1.0.3"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "vendored", "send"] }
eriemacros = { path = "./eriemacros" }
paste = "1.0.15"
eriert-api = { path = "../eriert-api" }

[lib]
crate-type = ["cdylib"]
