[package]
name = "eriert"
description = "Lightweight and extensible Lua runtime built entirely in Rust"
version = "1.0.0"
edition = "2024"

[dependencies]
eriert-api = { path = "../eriert-api" }
mlua = { version = "0.11.6", features = [
    "lua54", "vendored", "async", "send"
] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = { version = "0.8.8", features = ["macros"] }
paste = "1.0.15"
libloading = "0.9.0"
json5 = "1.3.1"
zip = { version = "8.5.1", features = ["deflate"] }
os_info = "3.14.0"
dir-tree-obj = "0.1.3"
fs_extra = "1.3.0"
